--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-new-app",
   "productName": "my-new-app",
-  "version": "v2.0.1",
+  "version": "2.0.0",
   "description": "My Electron application description",
   "main": ".vite/build/main.js",
   "scripts": {
